# project-template-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: cicd.yml  codeql.yml
host/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: lib.h
lib/src/: lib.cpp
test/: CMakeLists.txt
test/src/: example_test.cpp  libtest.cpp  main.cpp
